--- a/src/main/resources/templates/index.vm
+++ b/src/main/resources/templates/index.vm
@@ -8,7 +8,7 @@
 <body>
     <div class="main">
         <div class="welcome">
-            <p class="title"> Welcome to the Persona 5 fan-site! We will steal your heart! </p>
+            <p class="title"> Welcome whatever it is web-site </p>
             <p class="welcome_text">
                 Welcome to the whatever it is home page. Here you can do nothing at all. So go ahead and try it.
             </p>
